fixes to url and fix to corkboard item visibility

--- a/style/corkboard.css
+++ b/style/corkboard.css
@@ -34,7 +34,7 @@ corkboard-item {
     cursor: pointer;
 }
 corkboard-item.content-hidden {
-    content-visibility: hidden;
+    content-visibility: auto;
 }
 corkboard-item:not(.visible) {
     content-visibility: hidden;
